--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^7.7.0",
     "scrollreveal": "^4.0.9",
     "styled-components": "^6.0.8",
     "tailwindcss": "3.3.3",
